--- a/Deepremaster_Colorization_Code.ipynb
+++ b/Deepremaster_Colorization_Code.ipynb
@@ -54,7 +54,7 @@
         "id": "Kd9AXQ5LIWRK"
       },
       "source": [
-        "!python remaster.py --input Feel.mp4 --reference_dir References --gpu --mindim 360"
+        "!python remaster.py --input test.mp4 --reference_dir references --gpu --mindim 360"
       ],
       "execution_count": null,
       "outputs": []
